<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:columnCount="5"
    android:rowCount="11">

    <TextView
        android:layout_row="0"
        android:layout_column="0"
        android:layout_columnSpan="5"
        android:layout_gravity="fill"
        android:background="@android:color/black"
        android:textColor="@android:color/white"
        android:text="@string/rules_void_hello1_int_hour"
        android:textSize="4.5pt"
        android:textAlignment="center"/>
    <TextView
        android:layout_column="0"
        android:layout_row="1"
        android:layout_rowSpan="2"
        android:layout_gravity="fill"
        android:text="@string/properties"
        android:textSize="4.5pt"
        android:textAlignment="center"/>
    <TextView
        android:layout_row="1"
        android:layout_column="1"
        android:layout_columnSpan="2"
        android:layout_gravity="fill"
        android:text="@string/name"
        android:textSize="4.5pt"
        android:textAlignment="center"
        />
    <TextView
        android:layout_row="1"
        android:layout_column="3"
        android:layout_columnSpan="2"
        android:layout_gravity="fill"
        android:text="@string/day_hour_classification"
        android:textSize="4.5pt"
        />
    <TextView
        android:layout_row="2"
        android:layout_column="1"
        android:layout_columnSpan="2"
        android:layout_gravity="fill"
        android:text="@string/category"
        android:textSize="4.5pt"
        android:textAlignment="center"
        />
    <TextView
        android:layout_row="2"
        android:layout_column="3"
        android:layout_columnSpan="2"
        android:layout_gravity="fill"
        android:text="@string/day_and_time"
        android:textSize="4.5pt"
        />
    <TextView
        android:layout_row="3"
        android:layout_rowSpan="3"
        android:layout_column="0"
        android:layout_columnSpan="1"
        android:layout_gravity="fill"
        android:text="@string/rule"
        android:textSize="4.5pt"
        android:textAlignment="center"
        android:background="@android:color/holo_blue_bright"
        android:textStyle="bold"
        />
    <TextView
        android:layout_row="3"
        android:layout_rowSpan="1"
        android:layout_column="1"
        android:layout_columnSpan="2"
        android:layout_gravity="fill"
        android:text="@string/c1"
        android:textSize="4.5pt"
        android:textAlignment="center"
        android:background="@android:color/holo_blue_bright"
        android:textStyle="bold"
        />

    <TextView
        android:layout_row="3"
        android:layout_rowSpan="1"
        android:layout_column="3"
        android:layout_columnSpan="2"
        android:layout_gravity="fill"
        android:background="@android:color/holo_blue_bright"
        android:text="@string/a1"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textSize="4.5pt" />

    <TextView
        android:layout_row="4"
        android:layout_rowSpan="1"
        android:layout_column="1"
        android:layout_columnSpan="2"
        android:layout_gravity="fill"
        android:background="@android:color/holo_blue_bright"
        android:text="@string/min_hour_amp_amp_hour_max"
        android:textAlignment="center"
        android:textSize="4.5pt" />

    <TextView
        android:layout_row="4"
        android:layout_rowSpan="1"
        android:layout_column="3"
        android:layout_columnSpan="2"
        android:layout_gravity="fill"
        android:background="@android:color/holo_blue_bright"
        android:text="@string/system_out_println_greeting_world"
        android:textAlignment="center"
        android:textSize="4.5pt" />

    <TextView
        android:layout_row="5"
        android:layout_rowSpan="1"
        android:layout_column="1"
        android:layout_columnSpan="1"
        android:layout_gravity="fill"
        android:layout_columnWeight="1"
        android:background="@android:color/holo_blue_bright"
        android:text="@string/int_min"
        android:textAlignment="center"
        android:textSize="4.5pt" />

    <TextView
        android:layout_row="5"
        android:layout_rowSpan="1"
        android:layout_column="2"
        android:layout_columnSpan="1"
        android:layout_gravity="fill"
        android:layout_columnWeight="1"
        android:background="@android:color/holo_blue_bright"
        android:text="@string/int_max"
        android:textAlignment="center"
        android:textSize="4.5pt" />

    <TextView
        android:layout_row="5"
        android:layout_rowSpan="1"
        android:layout_column="3"
        android:layout_columnSpan="2"
        android:layout_gravity="fill"
        android:layout_columnWeight="1"
        android:background="@android:color/holo_blue_bright"
        android:text="@string/string_greeting"
        android:textAlignment="center"
        android:textSize="4.5pt" />

    <TextView
        android:layout_row="6"
        android:layout_rowSpan="1"
        android:layout_column="0"
        android:layout_columnSpan="1"
        android:layout_gravity="fill"
        android:layout_columnWeight="1"
        android:background="@android:color/white"
        android:text="@string/rule"
        android:textStyle="bold"
        android:textSize="4.5pt" />

    <TextView
        android:layout_row="6"
        android:layout_rowSpan="1"
        android:layout_column="1"
        android:layout_columnSpan="1"
        android:layout_gravity="fill"
        android:layout_columnWeight="1"
        android:background="@android:color/holo_orange_light"
        android:text="@string/from"
        android:textStyle="bold"
        android:textSize="4.5pt" />

    <TextView
        android:layout_row="6"
        android:layout_rowSpan="1"
        android:layout_column="2"
        android:layout_columnSpan="1"
        android:layout_gravity="fill"
        android:layout_columnWeight="1"
        android:background="@android:color/holo_orange_light"
        android:text="@string/to"
        android:textStyle="bold"
        android:textSize="4.5pt" />

    <TextView
        android:textStyle="bold"
        android:layout_row="6"
        android:layout_rowSpan="1"
        android:layout_column="3"
        android:layout_columnSpan="2"
        android:layout_gravity="fill"
        android:layout_columnWeight="1"
        android:background="@android:color/holo_orange_dark"
        android:text="@string/greeting"
        android:textSize="4.5pt" />

    <TextView
        android:layout_row="7"
        android:layout_rowSpan="1"
        android:layout_column="0"
        android:layout_columnSpan="1"
        android:layout_gravity="fill"
        android:layout_columnWeight="1"
        android:background="@android:color/white"
        android:text="@string/r10"
        android:textSize="4.5pt" />

    <TextView
        android:layout_row="7"
        android:layout_rowSpan="1"
        android:layout_column="1"
        android:layout_columnSpan="1"
        android:layout_gravity="fill"
        android:layout_columnWeight="1"
        android:background="@android:color/holo_orange_light"
        android:text="@string/_0"
        android:layoutDirection="rtl"
        android:textSize="4.5pt" />

    <TextView
        android:layout_row="7"
        android:layout_rowSpan="1"
        android:layout_column="2"
        android:layout_columnSpan="1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:background="@android:color/holo_orange_light"
        android:text="@string/_11"
        android:layoutDirection="rtl"
        android:textSize="4.5pt" />

    <TextView
        android:layout_row="7"
        android:layout_rowSpan="1"
        android:layout_column="3"
        android:layout_columnSpan="2"
        android:layout_gravity="fill"
        android:layout_columnWeight="1"
        android:background="@android:color/holo_orange_dark"
        android:text="@string/good_morning"
        android:textSize="4.5pt" />

    <TextView
        android:layout_row="8"
        android:layout_rowSpan="1"
        android:layout_column="0"
        android:layout_columnSpan="1"
        android:layout_gravity="fill"
        android:layout_columnWeight="1"
        android:background="@android:color/white"
        android:text="@string/r20"
        android:textSize="4.5pt" />

    <TextView
        android:layout_row="8"
        android:layout_rowSpan="1"
        android:layout_column="1"
        android:layout_columnSpan="1"
        android:layout_gravity="fill"
        android:layout_columnWeight="1"
        android:background="@android:color/holo_orange_light"
        android:text="@string/_12"
        android:layoutDirection="rtl"
        android:textSize="4.5pt" />

    <TextView
        android:layout_row="8"
        android:layout_rowSpan="1"
        android:layout_column="2"
        android:layout_columnSpan="1"
        android:layout_gravity="fill"
        android:layout_columnWeight="1"
        android:background="@android:color/holo_orange_light"
        android:text="@string/_17"
        android:layoutDirection="rtl"
        android:textSize="4.5pt" />

    <TextView
        android:layout_row="8"
        android:layout_rowSpan="1"
        android:layout_column="3"
        android:layout_columnSpan="2"
        android:layout_gravity="fill"
        android:layout_columnWeight="1"
        android:background="@android:color/holo_orange_dark"
        android:text="@string/good_afternoon"
        android:textSize="4.5pt" />

    <TextView
        android:layout_row="9"
        android:layout_rowSpan="1"
        android:layout_column="0"
        android:layout_columnSpan="1"
        android:layout_gravity="fill"
        android:layout_columnWeight="1"
        android:background="@android:color/white"
        android:text="@string/r30"
        android:textSize="4.5pt" />

    <TextView
        android:layout_row="9"
        android:layout_rowSpan="1"
        android:layout_column="1"
        android:layout_columnSpan="1"
        android:layout_gravity="fill"
        android:layout_columnWeight="1"
        android:background="@android:color/holo_orange_light"
        android:text="@string/_18"
        android:layoutDirection="rtl"
        android:textSize="4.5pt" />

    <TextView
        android:layout_row="9"
        android:layout_rowSpan="1"
        android:layout_column="2"
        android:layout_columnSpan="1"
        android:layout_gravity="fill"
        android:layout_columnWeight="1"
        android:background="@android:color/holo_orange_light"
        android:text="@string/_21"
        android:layoutDirection="rtl"
        android:textSize="4.5pt" />

    <TextView
        android:layout_row="9"
        android:layout_rowSpan="1"
        android:layout_column="3"
        android:layout_columnSpan="2"
        android:layout_gravity="fill"
        android:layout_columnWeight="1"
        android:background="@android:color/holo_orange_dark"
        android:text="@string/good_evening"
        android:textSize="4.5pt" />

    <TextView
        android:layout_row="10"
        android:layout_rowSpan="1"
        android:layout_column="0"
        android:layout_columnSpan="1"
        android:layout_gravity="fill"
        android:layout_columnWeight="1"
        android:background="@android:color/white"
        android:text="@string/r40"
        android:textSize="4.5pt" />

    <TextView
        android:layout_row="10"
        android:layout_rowSpan="1"
        android:layout_column="1"
        android:layout_columnSpan="1"
        android:layout_gravity="fill"
        android:layout_columnWeight="1"
        android:background="@android:color/holo_orange_light"
        android:text="@string/_21"
        android:layoutDirection="rtl"
        android:textSize="4.5pt" />

    <TextView
        android:layout_row="10"
        android:layout_rowSpan="1"
        android:layout_column="2"
        android:layout_columnSpan="1"
        android:layout_gravity="fill"
        android:layout_columnWeight="1"
        android:background="@android:color/holo_orange_light"
        android:text="@string/_23"
        android:layoutDirection="rtl"
        android:textSize="4.5pt" />

    <TextView
        android:layout_row="10"
        android:layout_rowSpan="1"
        android:layout_column="3"
        android:layout_columnSpan="2"
        android:layout_gravity="fill"
        android:layout_columnWeight="1"
        android:background="@android:color/holo_orange_dark"
        android:text="@string/good_night"
        android:textSize="4.5pt" />
</GridLayout>

